--- a/Hospital Management/Views/Home/Invoicing.cshtml
+++ b/Hospital Management/Views/Home/Invoicing.cshtml
@@ -230,11 +230,11 @@
                     <div class="modal-body">
                         <div class="form-floating mb-3">
                             <input class="form-control" type="text" id="newservicename" name="newservicename"/>
-                            <label for="newservicename"></label>
+                            <label for="newservicename">Service Name</label>
                         </div>
                         <div class="form-floating mb-3">
                             <input class="form-control" type="text" id="newserviceamount" name="newserviceamount"/>
-                            <label for="newserviceamount"></label>
+                            <label for="newserviceamount">Service Amount</label>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -248,6 +248,6 @@
 else
 {
     <div class="container">
-        <p class="text-center text-danger">There are no current appointments, appointments have 30 minutes until they expire.</p>
+        <p class="text-center text-danger">There are no current appointments, appointments have 1 hour until they expire.</p>
     </div>
 }
