--- a/Hospital Management/Views/Home/Receipt.cshtml
+++ b/Hospital Management/Views/Home/Receipt.cshtml
@@ -7,7 +7,7 @@
     <div class="card-body mx-4">
 
         <div class="d-flex justify-content-center">
-            <img class="img-fluid" src="/images/Picture1.svg"/>
+            <img class="img-fluid" src="/images/sai.png"/>
         </div>
         <div class="container">
             <p class="m-2" style="font-size: 30px;"><i class="bi bi-hospital"></i> Thank you, your appointment is at @Model.Date</p>
