--- a/Hospital Management/Views/Home/AboutUs.cshtml
+++ b/Hospital Management/Views/Home/AboutUs.cshtml
@@ -6,6 +6,32 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container-fluid mt-4 text-center">
+<div class="container-fluid mt-4 mb-3 text-center fw-bold">
     <h1>About Us</h1>
+</div>
+<div class="container-fluid row">
+    <div class="col-12 col-md-6 overflow-hidden">
+        <h4 class="text-primary fw-bold">We are always happy to hear from you.</h4>
+        <p><i class="bi bi-signpost"></i> 410 Anahaw Street,. Comembo Makati City, Philippines 1217</p>
+        <p><i class="bi bi-telephone-fill"></i> +6388-8777</p>
+        <p><i class="bi bi-envelope-fill"></i> Comembocare@gmail.com</p>
+        <iframe class="rounded-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.8789357176347!2d121.06394906772269!3d14.548915000000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c88fa91ac6dd%3A0x51a66e2a1102522c!2s410%20Anahaw%2C%20Makati%2C%201217%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1678548602817!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="col-12 col-md-6 my-auto">
+        <form>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+                <label for="textarea" class="form-label">Concerns</label>
+                <textarea type="text" class="form-control" id="textarea">
+
+
+</textarea>
+            </div>
+            <button type="submit" class="btn btn-primary"><i class="bi bi-send-fill"></i> Submit</button>
+        </form>
+    </div>
 </div>
