--- a/Hospital Management/Views/Shared/_Layout.cshtml
+++ b/Hospital Management/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body style="overflow-x: hidden" class="bg-grey">
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-grey border-bottom shadow-lg">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-grey border-bottom">
         <div class="container-fluid">
             <img src="/images/icon.png" style="max-height: 40px" class="me-2"/>
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color: #004aad">Comembo Care</a>
