--- a/Hospital Management/Views/Shared/_Layout.cshtml
+++ b/Hospital Management/Views/Shared/_Layout.cshtml
@@ -30,41 +30,6 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1 fw-bold">
-
-                    @* @if (!ViewData.TryGetValue("Patient", out var patient)) *@
-                    @* { *@
-                    @*     // Not Patient. *@
-                    @*     $1$ <li class="nav-item"> #1# *@
-                    @*     $1$     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"> #1# *@
-                    @*     $1$         <svg style="width:24px;height:24px" viewBox="0 0 24 24"> #1# *@
-                    @*     $1$             <path fill="currentColor" d="M21 11.11V5C21 3.9 20.11 3 19 3H14.82C14.4 1.84 13.3 1 12 1S9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.11 3.9 21 5 21H11.11C12.37 22.24 14.09 23 16 23C19.87 23 23 19.87 23 16C23 14.09 22.24 12.37 21 11.11M12 3C12.55 3 13 3.45 13 4S12.55 5 12 5 11 4.55 11 4 11.45 3 12 3M6 7H18V9H6V7M9.08 17H6V15H9.08C9.03 15.33 9 15.66 9 16S9.03 16.67 9.08 17M6 13V11H11.11C10.5 11.57 10.04 12.25 9.68 13H6M16 21C13.24 21 11 18.76 11 16S13.24 11 16 11 21 13.24 21 16 18.76 21 16 21M16.5 16.25L19.36 17.94L18.61 19.16L15 17V12H16.5V16.25Z"/> #1# *@
-                    @*     $1$         </svg> Patient History #1# *@
-                    @*     $1$     </a> #1# *@
-                    @*     $1$ </li> #1# *@
-                    @* } *@
-                    @* else if (patient is Patient) *@
-                    @* { *@
-                    @*     // Patient *@
-                    @*     <li class="nav-item"> *@
-                    @*         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a> *@
-                    @*     </li> *@
-                    @*     <li class="nav-item"> *@
-                    @*         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">About Us</a> *@
-                    @*     </li> *@
-                    @*     <li class="nav-item"> *@
-                    @*         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Services</a> *@
-                    @*     </li> *@
-                    @*     <li class="nav-item"> *@
-                    @*         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Smile Makeovers</a> *@
-                    @*     </li> *@
-                    @*     <li class="nav-item"> *@
-                    @*         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Appointment</a> *@
-                    @*     </li> *@
-                    @*     <li class="nav-item"> *@
-                    @*         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Message</a> *@
-                    @*     </li> *@
-                    @* } *@
-
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
@@ -77,7 +42,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="/tos">Terms of Service</a>
                     </li>
-                    
+
                     @if (!SignInManager.IsSignedIn(User))
                     {
                         // Patient
@@ -128,16 +93,19 @@
                     <a href="/" class="nav-link text-white"><i class="bi bi-house me-2"></i> Dashboard</a>
                 </li>
                 <li class="nav-item text-white m-3">
-                    <a href="/register" class="nav-link text-white"><i class="bi bi-person-fill-add" me-2></i> Register Doctor</a>
+                    <a href="/register" class="nav-link text-white"><i class="bi bi-person-fill-add me-2"></i> Register Doctor</a>
                 </li>
                 <li class="nav-item text-white m-3">
                     <a href="/patients" class="nav-link text-white"><i class="bi bi-people me-2"></i> Patients</a>
                 </li>
                 <li class="nav-item text-white m-3">
-                    <a href="/admin/appointments" class="nav-link text-white"><i class="bi bi-calendar"></i> Appointments</a>
+                    <a href="/admin/appointments" class="nav-link text-white"><i class="bi bi-calendar me-2"></i> Appointments</a>
                 </li>
                 <li class="nav-item text-white m-3">
-                    <a href="/Doctors" class="nav-link text-white"><i class="bi bi-file-earmark-image-fill me-2"></i> Doctor Images</a>
+                    <a href="/Doctors" class="nav-link text-white"><i class="bi bi-file-earmark-image-fill me-2"></i> Doctors</a>
+                </li>
+                <li class="nav-item text-white m-3">
+                    <a href="/medicine/view" class="nav-link text-white"><i class="bi bi-capsule me-2"></i> Medicine Inventory</a>
                 </li>
                 @* <li class="nav-item text-white m-3"> *@
                 @*     <a href="/messages" class="nav-link text-white"><i class="bi bi-chat-dots me-2"></i> Messages</a> *@
@@ -170,6 +138,9 @@ else if (User.IsInRole("Doctor"))
                 </li>
                 <li class="nav-item text-white m-3">
                     <a href="/doctor-invoice" class="nav-link text-white"><i class="bi bi-people me-2"></i> Invoice</a>
+                </li>
+                <li class="nav-item text-white m-3">
+                    <a href="/doctor/support" class="nav-link text-white"><i class="bi bi-chat-dots-fill me-2"></i> Support Chat</a>
                 </li>
                 @* <li class="nav-item text-white m-3"> *@
                 @*     <a href="/appointment-details" class="nav-link text-white"><i class="bi bi-file-earmark-image-fill me-2"></i> Appointment Details</a> *@
@@ -206,7 +177,14 @@ else
         </div>
     </footer>
 }
+
 @await Html.PartialAsync("Notifications")
+
+@if (User.IsInRole("Patient") || !SignInManager.IsSignedIn(User))
+{
+    @await Html.PartialAsync("FloatingChat")
+}
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
