--- a/Hospital Management/Views/Home/Patient.cshtml
+++ b/Hospital Management/Views/Home/Patient.cshtml
@@ -19,6 +19,10 @@
     IEnumerable<AppointmentModel> approvedAppointments = await DbContext.Appointments
         .Include(x => x.Doctor)
         .Where(x => x.Doctor != null && x.Patient.Id == patient.Id).ToListAsync();
+    
+    IEnumerable<AppointmentModel> unapprovedAppointments = await DbContext.Appointments
+        .Include(x => x.Doctor)
+        .Where(x => x.Doctor == null && x.Patient.Id == patient.Id).ToListAsync();
 
 }
 <div class="d-flex flex-row bd-highlight m-3">
@@ -40,17 +44,19 @@
                 <p class="mb-0">Created at<strong> @appointments.DateCreated</strong></p>
                 <p class="mb-0">Meet at<strong> @appointments.Date</strong></p>
                 <p class="mb-0">Service<strong> @appointments.Services</strong></p>
-                <a href="/delete/@appointments.AppointmentId" class="btn btn-danger"><i class="bi bi-trash3"></i> Delete</a>
+                <div class="container-fluid d-flex flex-row">
+                    <a href="/delete/@appointments.AppointmentId" class="btn btn-danger me-2 mb-2"><i class="bi bi-trash3"></i> Delete</a>
+                    <a href="/check-invoice/@appointments.AppointmentId" class="btn btn-info me-2 mb-2"><i class="bi bi-pen"></i> Veiw</a>
+                </div>
             </div>
         }
     }
 </div>
-
 <div class="container row">
-    @if (appointmentses.Any())
+    @if (unapprovedAppointments.Any())
     {
         <h2>Your Requested Appointments</h2>
-        @foreach (var appointments in appointmentses)
+        @foreach (var appointments in unapprovedAppointments)
         {
             <div class="alert alert-success container row" role="alert">
                 <h4 class="alert-heading"></h4>
