small ui changes

--- a/Hospital Management/Views/Home/Dashboard.cshtml
+++ b/Hospital Management/Views/Home/Dashboard.cshtml
@@ -39,9 +39,7 @@
 
             <div class="card text-center shadow-lg col-6  col-md-2">
                 <div class="m-2 card-img-top mx-auto">
-                    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M14.84,16.26C17.86,16.83 20,18.29 20,20V22H4V20C4,18.29 6.14,16.83 9.16,16.26L12,21L14.84,16.26M8,8H16V10A4,4 0 0,1 12,14A4,4 0 0,1 8,10V8M8,7L8.41,2.9C8.46,2.39 8.89,2 9.41,2H14.6C15.11,2 15.54,2.39 15.59,2.9L16,7H8M12,3H11V4H10V5H11V6H12V5H13V4H12V3Z"/>
-                    </svg>
+                    <i class="bi bi-hospital"></i>
                 </div>
                 <div class="card-body">
                     <p class="card-text text-center">
@@ -53,9 +51,7 @@
 
             <div class="card text-center shadow-lg col-6  col-md-2">
                 <div class="m-2 card-img-top mx-auto">
-                    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M16.5 17.25L19.36 18.94L18.61 20.16L15 18V13H16.5V17.25M23 17C23 20.87 19.87 24 16 24C14.09 24 12.37 23.24 11.11 22H6C4.89 22 4 21.11 4 20V4C4 2.9 4.89 2 6 2H7V9L9.5 7.5L12 9V2H18C19.1 2 20 2.89 20 4V11.26C21.81 12.53 23 14.62 23 17M21 17C21 14.24 18.76 12 16 12S11 14.24 11 17 13.24 22 16 22 21 19.76 21 17Z"/>
-                    </svg>
+                    <i class="bi bi-pencil-square"></i>
                 </div>
                 <div class="card-body">
                     <p class="card-text text-center">
@@ -79,9 +75,7 @@
 
             <div class="card text-center shadow-lg col-6  col-md-2">
                 <div class="m-2 card-img-top mx-auto">
-                    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M8 6C8 3.79 9.79 2 12 2S16 3.79 16 6 14.21 10 12 10 8 8.21 8 6M17 22H18C19.1 22 20 21.1 20 20V15.22C20 14.1 19.39 13.07 18.39 12.56C17.96 12.34 17.5 12.13 17 11.94V22M12.34 17L15 11.33C14.07 11.12 13.07 11 12 11C9.47 11 7.29 11.7 5.61 12.56C4.61 13.07 4 14.1 4 15.22V22H6.34C6.12 21.55 6 21.04 6 20.5C6 18.57 7.57 17 9.5 17H12.34M10 22L11.41 19H9.5C8.67 19 8 19.67 8 20.5S8.67 22 9.5 22H10Z"/>
-                    </svg>
+                    <i class="bi bi-person-badge"></i>
                 </div>
                 <div class="card-body">
                     <p class="card-text text-center">
@@ -102,9 +96,7 @@
                 {
                     <div class="card text-center shadow-lg col-6  col-md-2">
                         <div class="m-2 card-img-top mx-auto">
-                            <svg style="width:24px;height:24px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <title>tooth</title><path d="M7,2C4,2 2,5 2,8C2,10.11 3,13 4,14C5,15 6,22 8,22C12.54,22 10,15 12,15C14,15 11.46,22 16,22C18,22 19,15 20,14C21,13 22,10.11 22,8C22,5 20,2 17,2C14,2 14,3 12,3C10,3 10,2 7,2Z"/>
-                            </svg>
+                            <i class="bi bi-life-preserver"></i>
                         </div>
                         <div class="card-body">
                             <p class="card-text text-center">
