--- a/Hospital Management/Views/Home/Patient.cshtml
+++ b/Hospital Management/Views/Home/Patient.cshtml
@@ -37,14 +37,14 @@
         <h2>Your <strong>Approved</strong> Appointments</h2>
         @foreach (var appointments in approvedAppointments)
         {
-            <div class="alert alert-success shadow container row" role="alert">
+            <div class="alert bg-light shadow container row" role="alert">
                 <h4 class="alert-heading fw-bolder">Dr. @appointments.Doctor.Name</h4>
                 <p>@appointments.Note</p>
                 <hr>
                 <p class="mb-0">Created at<strong> @appointments.DateCreated</strong></p>
                 <p class="mb-0">Meet at<strong> @appointments.Date</strong></p>
                 <p class="mb-0">Service<strong> @appointments.Services</strong></p>
-                <div class="container-fluid d-flex flex-row">
+                <div class="container-fluid d-flex flex-row fw-bold">
                     <a href="/delete/@appointments.AppointmentId" class="btn btn-danger me-2 mb-2"><i class="bi bi-trash3"></i> Delete</a>
                     <a href="/check-invoice/@appointments.AppointmentId" class="btn btn-info me-2 mb-2"><i class="bi bi-pen"></i> Veiw</a>
                 </div>
@@ -58,7 +58,7 @@
         <h2>Your Requested Appointments</h2>
         @foreach (var appointments in unapprovedAppointments)
         {
-            <div class="alert alert-success container row" role="alert">
+            <div class="alert bg-light container row" role="alert">
                 <h4 class="alert-heading"></h4>
                 <p>@appointments.Note</p>
                 <hr>
